# dsai

./: .gitignore  install-hooks.sh
docs/: 404.html  CLAUDE.md  Gemfile  Makefile  README.md  _config.local.yml  _config.yml  about.md  curriculum.md  fix_liquid_tags.py  index.md  package.json  pyproject.toml  validate_jekyll.py
docs/0-prep/: README.md  airflow.md  anaconda.md  databricks.md  dbeaver.md  google-colab.md  jupyter-notebook.md  pedagogy.md  python-ds-stack.md  snowflake.md  tableau.md  vscode.md  windows.md
docs/1-data-fundamentals/: CODE-BLOCK-PATTERN.md  README.md
docs/2-data-wrangling/: README.md  TODO.md
docs/3-data-visualization/: FAQ.md  README.md  TODO.md  _assignments.md  beginners-guide.md  best-practices-guide.md  choosing-the-right-visualization.md  common-mistakes.md  glossary.md  quick-start.md  simple-examples.ipynb
docs/4-stat-analysis/: README.md  _assignments.md
docs/5-ml-fundamentals/: CODE_BLOCK_ANNOTATION.md  README.md  TODO.md  _assignments.md
docs/6-capstone/: README.md
docs/_data/: lesson_nav_order.yml  notebook_index.yml  submodule_sequence.yml
docs/_includes/: breadcrumbs.html  head-custom.html  lesson-nav.html  site-header.html
docs/_layouts/: default.html
docs/_plugins/: local_github_metadata_patch.rb
docs/additional-resources/: beginners-guide.md  best-practices-guide.md  faq.md  glossary.md
docs/assets/: manifest.webmanifest
docs/meta/: DOCUMENTATION_GUIDELINES.md  GITHUB-PAGES-GUIDE.md  INDEX-UPDATE-SUMMARY.md  README.md
docs/scripts/: add_after_outcomes.py  add_helpful_videos.py  migrate-mermaid.py  (+12 more)
(+458 files in other folders)
