[project]
name = "tamkeen-docs-tools"
version = "0"
description = "Dev tools for the Tamkeen Jekyll course site (optional; not required for GitHub Pages build)"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "seaborn>=0.13",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "missingno>=0.5.2",
  "plotly>=5.18",
  "requests>=2.31",
  "sqlalchemy>=2.0",
]

[tool.uv]
package = false
